--- a/PyTest Introduction/pytest.ini
+++ b/PyTest Introduction/pytest.ini
@@ -4,4 +4,9 @@ markers =
     validate_csv: mark test as a CSV validation test
 # Only look for files that start with 'test_'
 python_files = test_*.py
-# addopts
+rp_endpoint = https://reportportal.epam.com
+rp_api_key = my_api
+rp_launch = Pytest_Homework_Launch
+rp_project = VLADYSLAV_BUZAN_PERSONAL
+rp_enable = True
+rp_log_batch_size = 20
